Updated publications and added preview picture

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,5 +7,9 @@
       year={2023},
       eprint={2305.09566},
       archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      primaryClass={cs.CV},
+      arxiv={2305.09566},
+      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+      code={https://github.com/tberriel/RayPatchQuerying},
+      preview={QueryingComparison_text.png}
 }
