--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       arxiv={2305.09566},
-      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops, International conference on 3D vision 2024},
       code={https://github.com/tberriel/RayPatchQuerying},
       preview={QueryingComparison_text.png}
 }
