Updated news and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,19 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       arxiv={2305.09566},
-      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops, International conference on 3D vision 2024},
+      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops; International conference on 3D vision 2024},
       code={https://github.com/tberriel/RayPatchQuerying},
-      preview={QueryingComparison_text.png}
+      preview={QueryingComparison_text.png},
+      award_name={Spotlight}
+}
+@article{martins2024feature,
+      title={Feature Splatting for Better Novel View Synthesis with Low Overlap}, 
+      author={T. Berriel Martins and Javier Civera},
+      year={2024},
+      eprint={2405.15518},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      arxiv={2405.15518},
+      journal={Under Review},
+      award_name={Workshop Oral}
 }
