Added FeatSplat page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,9 +9,10 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       arxiv={2305.09566},
-      journal={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops; International conference on 3D vision 2024},
+      journal={International conference on 3D vision and Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
       code={https://github.com/tberriel/RayPatchQuerying},
       preview={QueryingComparison_text.png},
+      award={The paper was presented as an oral Spotlight at the International conference on 3D vision 2024 in Davos},
       award_name={Spotlight}
 }
 @article{martins2024feature,
@@ -23,5 +24,9 @@
       primaryClass={cs.CV},
       arxiv={2405.15518},
       journal={Under Review},
-      award_name={Workshop Oral}
+      award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
+      award_name={Workshop Oral},
+      website={https://tberriel.github.io/projects/FeatSplat},
+      code={https://github.com/tberriel/},
+      preview={featsplat.png},
 }
