Added videos to FeatSplat page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,8 +25,8 @@
       arxiv={2405.15518},
       journal={Under Review},
       award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
-      award_name={Workshop Oral},
+      award_name={ScanNet++ Workshop Oral},
       website={https://tberriel.github.io/projects/FeatSplat},
-      code={https://github.com/tberriel/},
+      code={https://github.com/tberriel/FeatSplat},
       preview={featsplat.png},
 }
