--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,10 +23,37 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       arxiv={2405.15518},
-      journal={Under Review},
+      journal={British Machine Vision Conference (BMVC) 2024},
       award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
       award_name={ScanNet++ Workshop Oral},
       website={https://tberriel.github.io/projects/FeatSplat},
       code={https://github.com/tberriel/FeatSplat},
       preview={featsplat.png},
+}
+@article{martins2024ovoslam,
+      title={Feature Splatting for Better Novel View Synthesis with Low Overlap}, 
+      author={T. Berriel Martins and Javier Civera},
+      year={2024},
+      eprint={2405.15518},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      arxiv={2405.15518},
+      journal={British Machine Vision Conference (BMVC) 2024},
+      award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
+      award_name={ScanNet++ Workshop Oral},
+      website={https://tberriel.github.io/projects/FeatSplat},
+      code={https://github.com/tberriel/FeatSplat},
+      preview={featsplat.png},
+}
+
+@article{martins2024ovo,
+  title={OVO-SLAM: Open-Vocabulary Online Simultaneous Localization and Mapping},
+  author={Martins, Tomas Berriel and Oswald, Martin R and Civera, Javier},
+  journal={Under review},
+  year={2024},
+  eprint={2411.15043},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  arxiv={2411.15043},
+  preview={ovoslam.png},
 }
