Fix last update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,11 +19,12 @@
       title={Feature Splatting for Better Novel View Synthesis with Low Overlap}, 
       author={T. Berriel Martins and Javier Civera},
       year={2024},
+      month={may},
       eprint={2405.15518},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       arxiv={2405.15518},
-      journal={British Machine Vision Conference (BMVC) 2024},
+      journal={British Machine Vision Conference (BMVC)},
       award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
       award_name={ScanNet++ Workshop Oral},
       website={https://tberriel.github.io/projects/FeatSplat},
@@ -36,6 +37,7 @@
   author={Martins, Tomas Berriel and Oswald, Martin R and Civera, Javier},
   journal={Under review},
   year={2024},
+  month={november},
   eprint={2411.15043},
   archivePrefix={arXiv},
   primaryClass={cs.CV},
