Update ovomappong preview image

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
 }
 
 @article{martins2024ovo,
-  title={OVO-SLAM: Open-Vocabulary Online Simultaneous Localization and Mapping},
+  title={Open-Vocabulary Online Semantic Mapping for SLAM},
   author={Martins, Tomas Berriel and Oswald, Martin R and Civera, Javier},
   journal={Under review},
   year={2024},
@@ -42,5 +42,5 @@
   archivePrefix={arXiv},
   primaryClass={cs.CV},
   arxiv={2411.15043},
-  preview={ovoslam.png},
+  preview={ovomapping.png},
 }
