Added Samu's paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@article{slam&render,
+  title     = {SLAM&Render: A Benchmark for the Intersection Between Neural Rendering, Gaussian Splatting and SLAM},
+  author    = {Samuel Cerezo and Gaetano Meli and Tomás Berriel Martins and Kirill Safronov and Javier Civera},
+  year      = {2025},
+  archivePrefix={arXiv},
+  primaryClass  = {cs.RO},
+  arxiv={2504.13713},
+  eprint    = {2504.13713},
+  journal = {},
+  website = {https://samuel-cerezo.github.io/SLAM&Render}, 
+}
 
 @article{martins2023raypatch,
       title={Ray-Patch: An Efficient Querying for Light Field Transformers}, 
