--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,9 +46,9 @@
 @article{martins2024ovo,
   title={Open-Vocabulary Online Semantic Mapping for SLAM},
   author={Martins, Tomas Berriel and Oswald, Martin R and Civera, Javier},
-  journal={Under review},
-  year={2024},
-  month={november},
+  journal={IEEE Robotics and Automation Letters}, 
+  year={2025},
+  month={september},
   eprint={2411.15043},
   archivePrefix={arXiv},
   primaryClass={cs.CV},
