Updated CV and bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,5 +53,7 @@
   archivePrefix={arXiv},
   primaryClass={cs.CV},
   arxiv={2411.15043},
+  website = {https://tberriel.github.io/ovo/}, 
+  code={https://github.com/tberriel/OVO},
   preview={ovomapping.png},
 }
