Updated featsplat link

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
       journal={British Machine Vision Conference (BMVC)},
       award={Ranked 2nd on the Novel View Synthesis challenge of the <a href="https://kaldir.vc.in.tum.de/scannetpp/cvpr2024">ScanNet++ CVPR 2024 Workshop},
       award_name={ScanNet++ Workshop Oral},
-      website={https://tberriel.github.io/FeatSplat},
+      website={https://tberriel.github.io/featsplat},
       code={https://github.com/tberriel/FeatSplat},
       preview={featsplat.png},
 }
